--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest --detectOpenHandles",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "preload": "node db/preload-db",
     "pretty": "prettier --write .",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,16 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.2.0",
     "mongoose": "^6.7.1",
+    "nodemon": "^2.0.21",
     "prettier": "^2.7.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yanliu1111/nim-assessment-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yanliu1111/nim-assessment-backend/issues"
+  },
+  "homepage": "https://github.com/yanliu1111/nim-assessment-backend#readme",
+  "description": ""
 }
