--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "preload": "node db/preload-db",
     "pretty": "prettier --write .",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.2.0",
     "mongoose": "^6.7.1",
+    "nodemon": "^3.0.1",
     "prettier": "^2.7.1"
   }
 }
