--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "preload": "node db/preload-db",
     "pretty": "prettier --write .",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^29.3.1",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.1"
   },
   "dependencies": {
@@ -27,6 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.2.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^6.7.1",
     "prettier": "^2.7.1"
   }
